--- a/untitled1/zz.html
+++ b/untitled1/zz.html
@@ -31,20 +31,19 @@
         }
     </style>
 </head>
-
 <body>
-    <div class="demo">
-    </div>
-    <script src="https://cdn.bootcdn.net/ajax/libs/jquery/3.5.1/jquery.js"></script>
-    <script src="fireworks.js"></script>
-    <script>
-        $('.demo').fireworks({
-            sound: true,
-            opacity: 0.6,
-            width: '100%',
-            height: '100%'
-        });
-    </script>
+<div class="demo">
+</div>
+<script src="https://cdn.bootcdn.net/ajax/libs/jquery/3.5.1/jquery.js"></script>
+<script src="firework.js"></script>
+<script>
+    $('.demo').fireworks({
+        sound: true,
+        opacity: 0.6,
+        width: '100%',
+        height: '100%'
+    });
+</script>
 
 </body>
 
